Name:                sr-cache
Version:             1.24.1
Synopsis:            Safe dynamic caching
License:             BSD3
License-file:        LICENSE
Copyright:           Copyright (c) 2022 David Fox
Author:              David Fox
Maintainer:          dsf@seereason.com
Stability:           experimental
Homepage:            http://github.com/seereason/sr-cache
Tested-With:         GHC ==8.6.5
Build-Type:          Simple
Cabal-Version:       >= 1.10

Library
  Build-Depends:
    base,
    bytestring,
    cereal,
    containers,
    data-default,
    exceptions,
    generic-lens,
    HUnit,
    lens,
    lens-path >= 3.31,
    mtl,
    safecopy,
    sr-errors,
    sr-utils
  Exposed-Modules:
    Data.Cache.Common
    Data.Cache.Dynamic
    Data.Cache.Encoded
    Data.Cache.Tests
  Hs-Source-Dirs: src

Test-Suite cache-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall -O
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base, containers, extra, HUnit, QuickCheck, sr-cache >= 1.1
